# MyWidgetEditor

./: .gitignore  CMakeLists.txt  CMake_README_RU.md  CMake_SETUP.md  MyWidgetEditor.sln  README.md
Drawer/: CMakeLists.txt  Drawer.cpp  Drawer.vcxproj  Drawer.vcxproj.filters  main.cpp
Drawer/managers/: RuntimeWidgetFactory.h  RuntimeWidgetManager.cpp  RuntimeWidgetManager.h
Drawer/runtime_widgets/: InputTextWidget.cpp  InputTextWidget.h  PlotWidget.cpp  PlotWidget.h  RenderWidget.cpp  RenderWidget.h  TableWidget.cpp  TableWidget.h  TextWidget.cpp  TextWidget.h  Widget.cpp  Widget.h  httplib_config.h
Drawer/ui/: MainWindowLayout.cpp  MainWindowLayout.h  RuntimeWindowProperties.h  WindowSettings.h
MyWidgetEditor/: CMakeLists.txt  MyWidgetEditor.vcxproj  MyWidgetEditor.vcxproj.filters  imgui.ini  layout.json
MyWidgetEditor/configs/: NEWE.json  RENDER.json  RENDER_TEST_TEST.json  WHY.json  all_test_back.json  another.json  back_and_render.json  balatro_wallpaper.json  bunny_new_test.json  connection.json  connection2test.json  df.json  layout.json  new.json  newapi_test_2.json  renamedColsTable.json  t_p_t_r.json  table_plot.json  table_plot_onbot.json  table_plot_render_text.json  table_plot_ser.json  tabletest.json  test.json  test_big_size.json  test_big_size2.json  testbackground.json  testbackground2.json  testcon.json  testwidnowprops.json  tets.json  text_test.json  textconfig.json  trancperent_plot.json  transperency.json
MyWidgetEditor/src/: DrawItems.cpp  EditorMainWindowLayout.cpp  WidgetInteraction.cpp  main.cpp
MyWidgetEditor/src/OpenGLHelpers/: Camera.h  MeshLoader.cpp  MeshLoader.hpp  Shader.cpp  Shader.hpp  TextureContainer.cpp  TextureContainer.hpp  text.txt
MyWidgetEditor/src/include/: BBCodeParser.h  DrawItems.h  EditorMainWindowLayout.h  Process.h  Widget.h  WidgetInteraction.h  independent_launcher.h
MyWidgetEditor/src/managers/: WidgetFactory.h  WidgetManager.cpp  WidgetManager.h
MyWidgetEditor/src/styles/: IconText.h  ImGuiObsStyle.cpp  ImGuiObsStyle.h  Scene.cpp  Scene.hpp
MyWidgetEditor/src/styles/shaders/: shaderSources.hpp
MyWidgetEditor/src/styles/shapes/: cube.hpp  plane.hpp
MyWidgetEditor/src/ui/: Connections.h  EditorFileBrowser.cpp  EditorMainWindowLayout.cpp  EditorMainWindowLayout.h  RuntimeWindowProperties.h
MyWidgetEditor/src/widgets/: InputTextWidget.cpp  InputTextWidget.h  PlotWidget.cpp  PlotWidget.h  RenderWidget.cpp  RenderWidget.h  TableWidget.cpp  TableWidget.h  TextWidget.cpp  TextWidget.h  Widget.cpp  Widget.h
assets/models/marin_kitagawa_from_dress_up_darling/: license.txt  scene.gltf
assets/shaders/Balatro/: balatro.frag  balatro.vert
assets/shaders/CineShader Lava/: CineShader_Lava .frag
assets/shapes/: cube.hpp  plane.hpp  pyramid.hpp
shared/: CMakeLists.txt
